# sast-bench

./: .gitignore  LICENSE  README.md  manifest.json  pyproject.toml
adapters/: CREATING_AN_ADAPTER.md  README.md
adapters/bandit/: adapter.py
adapters/code-review-agent/: adapter.py
adapters/securevibes-agent/: adapter.py
adapters/semgrep/: adapter.py
cases/core/capability_safe/PY-CS-001/: case.json  context.md
cases/core/capability_safe/RS-CS-001/: case.json  (+1 more)
cases/full/real_world_disclosed/: CODEX_BACKLOG.md
docs/: OWASP_AGENTIC_TOP10_MAPPING.md  PR_MODE.md
docs/.plan/: SASTBENCH_HANDOFF_CONTEXT.md  SAST_BENCHMARK_PLAN.md
schema/: case.schema.json  results.schema.json
scripts/: backfill_disclosure_dates.py  cutoff.py  generate_cases_from_specs.py  pr_runner.py  pr_scoring.py  report.py  run.py  scoring.py  setup_repos.py  validate.py  verify_cases_remote.py  verify_pr_strict.py
skills/sastbench-adapter-authoring/: SKILL.md
skills/sastbench-adapter-authoring/agents/: openai.yaml
skills/sastbench-adapter-authoring/references/: validation.md
skills/sastbench-results-validation/: SKILL.md
skills/sastbench-results-validation/agents/: openai.yaml
skills/sastbench-results-validation/references/: validation.md
taxonomy/: canonical_kinds.json  capabilities.json  languages.json  models.json
tests/: test_adapters.py  test_code_review_agent_adapter.py  test_cutoff.py  test_detail_mode.py  test_pr_runner.py  test_pr_scoring.py  test_profile_filter.py  test_scoring.py  test_securevibes_agent_adapter.py  test_setup_repos.py  test_validation.py
(+537 files in other folders)
