[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sastbench"
version = "1.0.0-dev"
description = "A benchmark for static analysis on agentic codebases."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "SASTbench contributors" },
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
official-adapters = [
  "bandit>=1.7.8",
  "semgrep>=1.77.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
  ".git",
  ".repos",
  ".venv",
  "cases",
  "results",
]
